spade-tests/src/snapshots/spade_tests__parser__empty_decl_error.snap
---
source: spade-tests/src/parser.rs
---
fn a() {
    decl;
}

error: empty decl statement
  ┌─ testinput:2:5
  │
2 │     decl;
  │     ^^^^ this decl does not declare anything
